--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    implementation(project(':data-report-commons'))
     implementation libs.nva.commons.core
     implementation libs.aws.sdk2.lambda.events
     implementation libs.aws.lambda.java.core
@@ -13,7 +14,11 @@ dependencies {
     testImplementation libs.aws.sdk2.s3
     testImplementation libs.nva.json
     testImplementation libs.nva.commons.core
-    testImplementation libs.nva.testutils
+    testImplementation('com.github.bibsysdev:nvatestutils:1.36.12') {
+        exclude group: 'org.wiremock', module: 'wiremock'
+    }
+    testImplementation libs.jena.fuseki
+    testImplementation group: 'org.apache.jena', name: 'apache-jena-fuseki', version: '4.10.0'
 }
 
 repositories {
