Small fixes to make the code minimally viable

--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation libs.nva.commons.core
     implementation libs.bundles.jena
     implementation libs.jena.core
+    implementation libs.bundles.logging
     implementation libs.jena.rdfconnection
     testImplementation libs.jena.fuseki
 }
