Use database connection everywhere

--- a/buildSrc/src/main/groovy/nva.data.report.api.rootplugin.gradle
+++ b/buildSrc/src/main/groovy/nva.data.report.api.rootplugin.gradle
@@ -29,3 +29,7 @@ tasks.named('check') {
     dependsOn tasks.named('testCodeCoverageReport', JacocoReport)
     dependsOn tasks.named('integrationTestCodeCoverageReport', JacocoReport)
 }
+
+configurations {
+    compile.exclude module: 'testing-utils'
+}
