--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'nva-data-report-api'
 include 'report-api'
 include 'data-loading'
 include 'data-report-commons'
+include 'testing-utils'
 
