--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation libs.jena.rdfconnection
     testImplementation(project(':testing-utils'))
     testImplementation libs.jena.fuseki
+    testImplementation(project(':data-report-test'))
 }
 
 repositories {
