Add vpc endpoint

--- a/template.yaml
+++ b/template.yaml
@@ -488,6 +488,19 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref PrivateSubnet1
 
+  VpcEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref LambdaSecurityGroup
+      ServiceName: com.amazonaws.eu-west-1.s3
+      VpcEndpointType: Interface
+      SubnetIds:
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+      VpcId: !Ref VPC
+
 #### OUTPUTS ####
 Outputs:
   VpcId:
