Use api-host as base path

--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -29,5 +29,6 @@ repositories {
 }
 
 test {
-    environment("QUERY_PATH", "gsp/sparql")
+    environment('QUERY_PATH', 'gsp/sparql')
+    environment('API_HOST', 'example.org')
 }
