Add env var API_HOST

--- a/template.yaml
+++ b/template.yaml
@@ -76,6 +76,7 @@ Globals:
       Variables:
         NEPTUNE_WRITE_ENDPOINT: !GetAtt NeptuneCluster.Endpoint
         NEPTUNE_READ_ENDPOINT: !GetAtt NeptuneCluster.ReadEndpoint
+        API_HOST: !Ref ApiDomain
         QUERY_PATH: "query"
         NEPTUNE_PORT: 8182
 
