--- a/template.yaml
+++ b/template.yaml
@@ -76,7 +76,7 @@ Globals:
       Variables:
         NEPTUNE_ENDPOINT: !GetAtt NeptuneCluster.Endpoint
         API_HOST: !Ref ApiDomain
-        QUERY_PATH: ""
+        QUERY_PATH: 'none'
         NEPTUNE_PORT: 8182
 
 Resources:
