Set global Lambda ReservedConcurrentExecutions to 25

--- a/template.yaml
+++ b/template.yaml
@@ -66,6 +66,7 @@ Globals:
   Function:
     Runtime: java21
     MemorySize: 1536
+    ReservedConcurrentExecutions: 25
     VpcConfig:
       SecurityGroupIds:
         - !Ref LambdaSecurityGroup
