Add scope reporting-read. Add ExternalCognitoAuthorizerArn.

--- a/template.yaml
+++ b/template.yaml
@@ -9,6 +9,10 @@ Parameters:
     Type: 'AWS::SSM::Parameter::Value<String>'
     Description: Reference to Cognito UserPool for the stage
     Default: CognitoAuthorizerArn
+  ExternalCognitoAuthorizerArn:
+    Type: 'AWS::SSM::Parameter::Value<String>'
+    Description: Reference to ARN of ExternalUsers UserPool
+    Default: ExternalCognitoAuthorizerArn
   CognitoAuthorizationUri:
     Type: 'AWS::SSM::Parameter::Value<String>'
     Default: '/NVA/CognitoUri'
