--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -22,7 +22,7 @@ dependencies {
         environment("NEPTUNE_ENDPOINT", "localhost")
         environment("NEPTUNE_PORT", "8182")
         environment("LOADER_IAM_ROLE", "aim:role:loader")
-        environment("AWS_REGION", "eu-west-1")
+        environment("AWS_REGION_NAME", "eu-west-1")
         environment("LOADER_BUCKET", "s3://someBucket")
     }
 }
