--- a/template.yaml
+++ b/template.yaml
@@ -544,12 +544,6 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref LambdaSubnet1
 
-  PrivateRouteTableNeptuneAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      SubnetId: !Ref PrivateSubnet1
-
   S3GatewayEndpoint:
     Type: 'AWS::EC2::VPCEndpoint'
     Properties:
@@ -601,7 +595,7 @@ Resources:
                 Action:
                   - s3:Get*
                   - s3:List*
-                Resource: !GetAtt LoaderBucket.Arn
+                Resource: !Sub '${LoaderBucket}/*'
 
 
 #### OUTPUTS ####
