--- a/template.yaml
+++ b/template.yaml
@@ -380,6 +380,8 @@ Resources:
       ServerlessScalingConfiguration:
         MaxCapacity: 128
         MinCapacity: 2.5
+      EnableCloudwatchLogsExports:
+        - error
 
   NeptuneInstance1:
     Type: AWS::Neptune::DBInstance
