--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation libs.bundles.jena
     implementation libs.nva.s3
     implementation libs.nva.commons.core
+    implementation libs.nva.json
     implementation libs.aws.sdk2.lambda.events
     implementation libs.aws.lambda.java.core
     implementation libs.bundles.logging
