Add bulk loader (#44)
* Add bulk loader

* Add region

* Respond to QA

* Avoid using reserved key

* Remove stray comma

* Use substitution for bucket s3 uri

* Attach role to neptune cluster

* Add a folder to s3 path

* Add private route table association for Neptune

* Use S3-sub

* Back to Arn

* Add PrivateRouteTable2Association

* Add loging to Neptune cluster

* Use allowed log type

* Remove logging

* Enable audit logging

* Add error-log request

* Handle inputstreams

* Use attempt to discern types

* Lint stray deps

* Use loadId to differentiate

* Escape string in log message

* Stringfy everything

* Log request URI

* use get

* Use sub with all items in bucket policy

* Re-instate response string testing

* Add top-level-bucket access

* Use uri-wrapper to create loader URI

* Remove unused

--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -8,4 +8,22 @@ repositories {
 
 dependencies {
     implementation libs.bundles.jena
+    implementation libs.nva.s3
+    implementation libs.nva.commons.core
+    implementation libs.nva.json
+    implementation libs.aws.sdk2.lambda.events
+    implementation libs.aws.lambda.java.core
+    implementation libs.bundles.logging
+
+    testImplementation('com.github.bibsysdev:nvatestutils:1.36.12') {
+        exclude group: 'org.wiremock', module: 'wiremock'
+    }
+
+    test {
+        environment("NEPTUNE_ENDPOINT", "localhost")
+        environment("NEPTUNE_PORT", "8182")
+        environment("LOADER_IAM_ROLE", "aim:role:loader")
+        environment("AWS_REGION_NAME", "eu-west-1")
+        environment("LOADER_BUCKET", "s3://someBucket")
+    }
 }
