--- a/template.yaml
+++ b/template.yaml
@@ -51,7 +51,7 @@ Parameters:
     Description: Name of bucket for input NQuads files
   KeyBatchesBucketName:
     Type: 'String'
-    Default: "key-batches"
+    Default: "data-report-key-batches"
     Description: Name of bucket for key batch files
 
 Mappings:
