Process key batches (#55)
* WIP: read from keys bucket and persist

* Store batches as quads

* Finalize functionality

* Change static field visibility

--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    implementation(project(':data-report-commons'))
     implementation libs.bundles.jena
     implementation libs.nva.s3
     implementation libs.nva.commons.core
@@ -27,11 +28,12 @@ dependencies {
     }
 
     test {
+        environment("API_HOST", "example.org")
         environment("NEPTUNE_ENDPOINT", "localhost")
         environment("NEPTUNE_PORT", "8182")
         environment("LOADER_IAM_ROLE", "aim:role:loader")
         environment("AWS_REGION_NAME", "eu-west-1")
-        environment("LOADER_BUCKET", "s3://someBucket")
+        environment("LOADER_BUCKET", "s3://loaderBucket")
         environment("EXPANDED_RESOURCES_BUCKET", "s3://persistedResources")
         environment("KEY_BATCHES_BUCKET", "s3://keyBatches")
         environment("EVENT_BUS", "eventBus")
