--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     implementation libs.nva.commons.core
+    implementation libs.nva.json
     implementation libs.bundles.jena
     implementation libs.jena.core
     implementation libs.bundles.logging
