--- a/template.yaml
+++ b/template.yaml
@@ -626,6 +626,7 @@ Resources:
             Action:
               - 's3:Get*'
               - 's3:List*'
+              - 's3:PutObject'
             Resource: '*'
 
   #---- EventBus ----
