--- a/template.yaml
+++ b/template.yaml
@@ -138,9 +138,17 @@ Resources:
                 Action:
                   - s3:Get*
                   - s3:List*
-                  - events:*
                   - s3:PutObject
                 Resource: '*'
+        - PolicyName: Events
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - events:*
+                Resource:
+                  - !GetAtt BatchLoadEventBus.Arn
         - PolicyName: neptuneAccessPolicy
           PolicyDocument:
             Version: 2012-10-17
@@ -614,7 +622,7 @@ Resources:
     Type: 'AWS::EC2::VPCEndpoint'
     Properties:
       VpcId: !Ref VPC
-      ServiceName: com.amazonaws.eu-west-1.s3
+      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
       RouteTableIds:
         - !Ref PrivateRouteTable
       VpcEndpointType: Gateway
@@ -628,6 +636,19 @@ Resources:
               - 's3:List*'
               - 's3:PutObject'
             Resource: '*'
+
+  EventBridgeVPCEndpoint:
+    Type: 'AWS::EC2::VPCEndpoint'
+    Properties:
+      VpcId: !Ref VPC
+      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.events'
+      VpcEndpointType: 'Interface'
+      SubnetIds:
+        - !Ref LambdaSubnet1
+        - !Ref LambdaSubnet2
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref LambdaSecurityGroup
 
   #---- EventBus ----
 
