--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -8,7 +8,10 @@ repositories {
 
 dependencies {
     implementation(project(':data-report-commons'))
-    implementation libs.bundles.jena
+    implementation(libs.bundles.jena) {
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+    }
+    implementation libs.bundles.jackson
     implementation libs.nva.s3
     implementation libs.nva.commons.core
     implementation libs.nva.json
@@ -23,7 +26,7 @@ dependencies {
     implementation libs.aws.sdk2.urlconnection
     implementation libs.nva.identifiers
 
-    testImplementation('com.github.bibsysdev:nvatestutils:1.36.12') {
+    testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
 
