--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     testImplementation libs.jena.fuseki
     testImplementation(project(':testing-utils'))
     testImplementation 'com.opencsv:opencsv:5.9'
-    testImplementation('com.github.bibsysdev:nvatestutils:1.36.12') {
+    testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
 }
