--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
+    testImplementation libs.bundles.testing
 }
 
 repositories {
