--- a/template.yaml
+++ b/template.yaml
@@ -357,27 +357,7 @@ Resources:
         Variables:
           ALLOWED_ORIGIN: '*'
           COGNITO_HOST: !Ref CognitoAuthorizationUri
-      Events:
-        ApiEvent:
-          Type: Api
-          Properties:
-            Path: /institution/nvi-approval/{reportingYear}
-            Method: get
-            RestApiId: !Ref DataReportApi
-
-  FetchNviInstitutionReportProxyHandler:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: report-api
-      Handler: no.sikt.nva.data.report.api.fetch.FetchNviInstitutionReportProxy::handleRequest
-      Role: !GetAtt LambdaRole.Arn
-      Timeout: 600
-      MemorySize: 1536
-      AutoPublishAlias: live
-      Environment:
-        Variables:
-          ALLOWED_ORIGIN: '*'
-          COGNITO_HOST: !Ref CognitoAuthorizationUri
+          BACKEND_CLIENT_SECRET_NAME: 'BackendCognitoClientCredentials'
       Events:
         ApiEvent:
           Type: Api
