--- a/template.yaml
+++ b/template.yaml
@@ -357,6 +357,7 @@ Resources:
         Variables:
           ALLOWED_ORIGIN: '*'
           COGNITO_HOST: !Ref CognitoAuthorizationUri
+          BACKEND_CLIENT_SECRET_NAME: 'BackendCognitoClientCredentials'
       Events:
         ApiEvent:
           Type: Api
