--- a/template.yaml
+++ b/template.yaml
@@ -125,6 +125,15 @@ Resources:
               Service: [ lambda.amazonaws.com ]
             Action: [ 'sts:AssumeRole' ]
       Policies:
+        - PolicyName: readSecret
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - secretsmanager:GetSecretValue
+                Resource:
+                  - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:BackendCognitoClientCredentials-*"
         - PolicyName: readFromS3
           PolicyDocument:
             Version: 2012-10-17
