--- a/template.yaml
+++ b/template.yaml
@@ -137,8 +137,7 @@ Resources:
             Action:
               - 's3:DeleteObject'
             Resource:
-              - !Ref KeyBatchesBucket
-              - !Sub '${KeyBatchesBucket.Arn}/*'
+              - !Ref KeyBatchesBucket.Arn
 
   S3ManagedPolicy:
     Type: AWS::IAM::ManagedPolicy
